# cmake-trainining

./: .gitignore  .gitmodules  README.md
lecures-support/02-first-cmake-project/: CMakeLists.txt
lecures-support/03-variables/: CMakeLists.txt
lecures-support/04-basic-targets/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h  main.cpp
lecures-support/05-project-structure/: CMakeGraphVizOptions.cmake  CMakeLists.txt
lecures-support/05-project-structure/src/data-parsers/json-parser/: CMakeLists.txt
lecures-support/05-project-structure/src/data-parsers/json-parser/test/: CMakeLists.txt
lecures-support/07-generator-expressions/: CMakeLists.txt  main.cpp
lecures-support/08-definitions/: CMakeLists.txt
lecures-support/08-definitions/src/data-parsers/json-parser/: CMakeLists.txt  JsonCameraDataParser.h
lecures-support/09-cache-variables/: CMakeLists.txt
lecures-support/11-providing-sources-to-target/: CMakeLists.txt  FileWriter.cpp
lecures-support/12-first-cmake-project/: CMakeLists.txt
lecures-support/12-loops/: CMakeLists.txt
lecures-support/12-providing-sources-to-target/: CMakeLists.txt
lecures-support/13-functions/: CMakeLists.txt  MyClass.cpp
lecures-support/13-loops/: CMakeLists.txt
lecures-support/14-cache-variables/: CMakeLists.txt
lecures-support/14-functions/: CMakeLists.txt  main.cpp
lecures-support/14-macros/: argumentsPrinters.cmake
lecures-support/15-extra-functions-parameters/: myClass.cpp  otherClass.h
lecures-support/15-macros/: CMakeLists.txt
lecures-support/16-extra-functions-parameters/: CMakeLists.txt
lecures-support/18-functions/: CMakeLists.txt
lecures-support/18-setting-compiler-flags/: CMakeLists.txt
lecures-support/18-setting-compiler-flags/cmake/: AddSanitizerFlagsIfNeeded.cmake
lecures-support/19-plugin/: .clang-format  CMakeLists.txt
lecures-support/19-plugin/cmake/: SevenidePlugin.cmake  TargetPluginDependency.cmake
lecures-support/19-plugin/src/: CMakeLists.txt
lecures-support/19-plugin/src/application/: CMakeLists.txt  main.cpp
lecures-support/19-plugin/src/plugin-system/plugin-loader-factory/: CMakeLists.txt  PluginLoaderFactory.cpp  PluginLoaderFactory.h
lecures-support/19-plugin/src/plugin-system/plugin-system-interface/: CMakeLists.txt  ClassId.h  ClassInfo.h  IGraphicsFactory.h  IObjectsFactory.h  IPlugin.h  IPluginHandle.h  IPluginLoader.h  PluginInfo.h  Version.cpp  Version.h
lecures-support/19-plugin/src/plugins/objects2d/: CMakeLists.txt  Objects2DPlugin.cpp  Objects2DPlugin.h  Rectangle.cpp  Rectangle.h  compiledef.h
lecures-support/19-plugin/src/plugins/opengl-graphics/: CMakeLists.txt  OpenGLCanvas.cpp  OpenGLCanvas.h  OpenGLGraphicsPlugin.cpp  OpenGLGraphicsPlugin.h
lecures-support/20-executing-processes/: CMakeLists.txt  GitTools.cmake
lecures-support/20-macros/: CMakeLists.txt
lecures-support/21-configuring-files/: CMakeLists.txt
lecures-support/21-configuring-files/src/: CMakeLists.txt
lecures-support/21-configuring-files/src/data-parsers/: CMakeLists.txt
lecures-support/21-configuring-files/src/data-parsers/parser-interface/: ICameraDataParser.h
lecures-support/21-extra-functions-parameters/: CMakeLists.txt  main.cpp  myClass.h  otherClass.cpp
lecures-support/22-installing/: CMakeLists.txt
lecures-support/23-finding-external-libraries/: CMakeLists.txt  main.cpp
lecures-support/24-basic-targets/: CMakeLists.txt  ExampleClass.h
lecures-support/24-creating-own-find-package-mechanism/: FindMyCalculator.cmake
lecures-support/27-exporting/: CMakeLists.txt
lecures-support/27-exporting/cmake/: InstallLibraryDependencies.cmake
lecures-support/28-definitions/: CMakeLists.txt
lecures-support/28-definitions/src/application/: CMakeLists.txt
lecures-support/32-configuring-files/: CMakeLists.txt  Doxyfile-alternative.in  Doxyfile.in
lecures-support/35-executing-processes/: CMakeLists.txt
lecures-support/42-setting-compiler-flags/: CMakeLists.txt
lecures-support/45-cross-compilation/: CMakeLists.txt  gcc-linaro-toolchain-file-online.cmake  gcc-linaro-toolchain-file.cmake
lecures-support/46-finding-external-libraries/: CMakeLists.txt  main.cpp
lecures-support/49-creating-own-find-package-mechanism/: FindMyCalculator.cmake
lecures-support/52-installing/: CMakeLists.txt
lecures-support/52-installing/src/application/: CMakeLists.txt
lecures-support/54-exporting/: FileWriter.h
lecures-support/64-testing/: CMakeLists.txt
lecures-support/65-clang-tidy/: .clang-tidy  CMakeLists.txt
lecures-support/65-clang-tidy/cmake/: UseClangTidy.cmake
lecures-support/66-ccache/: CMakeLists.txt
solutions/18-functions/: CMakeLists.txt  MyClass.h
solutions/52-installing/: CMakeLists.txt  task.txt
solutions/52-installing/src/application/: CMakeLists.txt  main.cpp
solutions/52-installing/src/file-loaders/: CMakeLists.txt
tasks/: file
tasks/01-basic-target-task/: CMakeLists.txt  Vector3.cpp  VectorPrinter.cpp  task.txt
tasks/02-project-structure/: task.txt
tasks/02-project-structure/src/parser/json-parser/: CMakeLists.txt
tasks/03-cache-variables/: task.txt
tasks/03-cache-variables/src/file-loader/: CMakeLists.txt
tasks/04-basic-target-task/: CMakeLists.txt  Vector3.h  VectorPrinter.h  main.cpp  task.txt
tasks/04a-definitions/: CMakeLists.txt  task.txt
tasks/04a-definitions/src/server/simple-server/: CMakeLists.txt  SimpleServerAddressProvider.cpp
tasks/04b-definitions/: task.txt
tasks/05-project-structure/: task.txt
tasks/07-definitions/: task.txt
tasks/08-cache-variables/: task.txt
tasks/13-functions/: CMakeLists.txt
tasks/14-functions/: OtherClass.h  task.txt
tasks/18-functions/: CMakeLists.txt  OtherClass.cpp
tasks/22-installing/: task.txt
tasks/24-creating-own-find-package_mechanism/: task.txt
tasks/26-project-structure/src/: CMakeLists.txt  main.cpp
tasks/27-exporting/: task.txt
tasks/49-creating-own-find-package_mechanism/: CMakeLists.txt  task.txt
tasks/52-installing/: .clang-format  CMakeLists.txt  task.txt
tasks/54-exporting/: task.txt
tasks/64-testing/: CMakeLists.txt  task.txt
(+49 files in other folders)
